plugins {
	id 'java'
	id 'application'
	id 'com.github.johnrengelman.shadow' version '2.0.1'
	id 'eclipse'
	id 'idea'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

mainClassName = 'vazkii.cmpdl.CMPDL'

eclipse.project {
	natures 'org.eclipse.buildship.core.gradleprojectnature'
	natures 'org.springsource.ide.eclipse.gradle.core.nature'
}

repositories {
	mavenCentral()
}

dependencies {
	compile 'com.google.code.gson:gson:2.8.1'
	compile 'net.lingala.zip4j:zip4j:1.3.2'
}
